--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@ body{
 	margin: auto;
 
 }
+#location{
+	@apply text-center text-3xl
+
+}
 
 .container{
 	margin-left: auto;
@@ -15,27 +19,31 @@ body{
 }
 
 .card{
-	@apply w-3/12 h-1/3 border border-cyan-950 min-h-56 rounded-3xl;
+	@apply w-3/12 h-1/3 border border-cyan-950 min-h-56 rounded-3xl min-w-44 flex flex-col;
 	margin: auto;
+}
+
+.card div{ 
+	@apply p-1
+
 }
 
 .section-header {
 	margin: auto;
-	@apply font-bold text-2xl place-self-center justify-self-center text-center
-
+	@apply font-bold lg:text-2xl place-self-center justify-self-center text-center md:text-base sm:text-sm
 }
 
 .card h2{
-	@apply font-bold text-3xl text-center
+	@apply  lg:text-2xl text-left md:text-lg
 }
 
 .card-header {
-	@apply font-bold text-xl text-center
+	@apply font-bold text-2xl text-center
 
 }
 
 .container-row{
-	@apply flex flex-row gap-x-5
+	@apply flex flex-row gap-x-5 flex-wrap gap-y-5
 
 }
 
@@ -51,11 +59,16 @@ body{
 #searchForm button{
 	@apply border-sky-50 bg-sky-500 hover:bg-sky-700 min-w-16 min-h-4 rounded
 }
+#unit-toggle{
+	@apply border-sky-50 bg-sky-500 hover:bg-sky-700  min-w-16 max-w-24 min-h-4 rounded self-center mb-2
+}
 
 .card img {
-	@apply w-10/12 m-auto pb-1;
+	@apply w-10/12 m-auto pb-1 max-w-12 max-h-12;
 	border-radius: 50%;
 }
+.card p{
+	@apply m-auto mb-0 bottom-0 self-end justify-end
 
-.forecast{
 }
+
